objects/CN_Payment_History__c.object
<CustomObject>
    <fields>
        <fullName>CN_Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Arrears_After_Net_Due_Date__c</fullName>
        <formula>if(ISBLANK(CN_Net_Due_Date__c)||ISBLANK(CN_Due_Date__c),null,(CN_Net_Due_Date__c - CN_Due_Date__c))</formula>
        <label>Arrears After Net Due Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>CN_Customer_Name__r.CN_Customer_Code__c</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Histories</relationshipLabel>
        <relationshipName>Payment_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Delivery_date__c</fullName>
        <label>Delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Finance_AR__c</fullName>
        <formula>CN_Customer_Name__r.CN_Sinodis_Finance_AR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance AR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_NetDueDate_is_Null__c</fullName>
        <formula>ISBLANK(CN_Net_Due_Date__c)</formula>
        <label>NetDueDate is Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Net_Due_Date__c</fullName>
        <label>Actual Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Persion__c</fullName>
        <formula>CN_Customer_Name__r.CN_Sales_Person_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Year_Month__c</fullName>
        <formula>TEXT( CN_Year__c ) + TEXT(CN_Month__c)</formula>
        <label>Year Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Amount__c</columns>
        <columns>CN_Due_Date__c</columns>
        <columns>CN_Net_Due_Date__c</columns>
        <columns>CN_Arrears_After_Net_Due_Date__c</columns>
        <columns>CN_Remark__c</columns>
        <columns>CN_Invoice_Number__c</columns>
        <columns>CN_Tracking_Number__c</columns>
        <columns>CN_Invoice_Date__c</columns>
        <columns>CN_Delivery_date__c</columns>
        <columns>CN_Finance_AR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NetDueDate_Null_ListView</fullName>
        <columns>NAME</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Amount__c</columns>
        <columns>CN_Due_Date__c</columns>
        <columns>CN_Net_Due_Date__c</columns>
        <columns>CN_Arrears_After_Net_Due_Date__c</columns>
        <columns>CN_Remark__c</columns>
        <columns>CN_Invoice_Number__c</columns>
        <columns>CN_Tracking_Number__c</columns>
        <columns>CN_Invoice_Date__c</columns>
        <columns>CN_Delivery_date__c</columns>
        <columns>CN_Finance_AR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_NetDueDate_is_Null__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Actual payment date Is Blank</label>
    </listViews>
    <nameField>
        <displayFormat>PH-{0000000000}</displayFormat>
        <label>Payment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>